--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.4",
+    "@types/socket.io-client": "^1.4.32"
   }
 }
