--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-youtube": "^7.9.0",
