--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "googleapis": "^52.1.0",
+    "jws": "^4.0.0",
     "mongoose": "^5.8.11",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
