--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.3.3",
     "axios": "^0.19.2",
+    "jws": "^4.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-linkify": "^1.0.0-alpha",
