Update to build and serve static assets from project root

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,12 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "webpack-dev-server",
+    "build": "webpack --mode production && cpy site ../backend/public",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,12 +23,6 @@
     "react-scripts": "3.4.0",
     "react-youtube": "^7.9.0",
     "socket.io-client": "^2.3.0"
-  },
-  "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack --mode production",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +44,7 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
+    "cpy-cli": "^3.1.1",
     "css-loader": "^3.6.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
