--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jws": "^4.0.0",
     "mongoose": "^5.8.11",
     "nodemon": "^2.0.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "username-generator": "^1.1.0"
   }
 }
